# Trilha-BackEnd

./: .env.example  README.md  pyproject.toml
src/: alembic.ini  docker-compose.yml
src/alembic/: env.py
src/alembic/versions/: b8cab4c8ffa4_cria_tabela_pacientes.py  e235f8d3ae4d_cria_tabela_usuarios.py
src/app/: config.py  database.py  main.py
src/app/models/: __init__.py  consulta.py  exame.py  medico.py  paciente.py  prescricao.py  prontuario.py  usuario.py
src/app/routers/: auth.py  consultas.py  exames.py  medicos.py  pacientes.py  prescricoes.py  prontuarios.py
src/app/schemas/: consulta.py  exame.py  medico.py  paciente.py  prescricao.py  prontuario.py  usuario.py
src/app/services/: auth.py  consulta.py  exame.py  medico.py  paciente.py  prescricao.py  prontuario.py
src/app/utils/: dependencies.py  security.py
src/diagrams/: casos_de_uso.md  classes.md  mer.md
src/docs/: endpoints.md
src/tests/: conftest.py  test_auth.py  test_consultas.py  test_exames.py  test_medicos.py  test_pacientes.py  test_prescricoes.py  test_prontuarios.py
