[build-system]
requires = [
    "uv_build >= 0.10.0, <0.11.0"
]
build-backend = "uv_build"

[project]
version="1.0.0"
name = "Trilha-Backend"
requires-python = ">= 3.13.0, < 3.14.0"
authors = [
    {name = "Miguel Silva", email = "miguelcamposdasilva@gmail.com"}
]

description = "Trabalho final do curso de Analise e Desenvolvimento de Sistemas."
readme = "README.md"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "alembic==1.14.1",
    "pymysql==1.1.1",
    "cryptography==44.0.0",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.2.1",
    "pydantic[email]==2.10.4",
    "pydantic-settings==2.7.1",
    "pydantic-core==2.27.2",
    "python-multipart==0.0.20",
    "python-dotenv==1.0.1",
    "httpx==0.28.1",
    "pytest==8.3.4",
    "ruff==0.1.0",
]
